; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kcpu.c_m68k_init.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kcpu.c_m68k_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@m68k_init.emulation_initialized = internal global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_init() #0 {
  %1 = load i32, i32* @m68k_init.emulation_initialized, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

3:                                                ; preds = %0
  %4 = call i32 (...) @m68ki_build_opcode_table()
  store i32 1, i32* @m68k_init.emulation_initialized, align 4
  br label %5

5:                                                ; preds = %3, %0
  %6 = call i32 @m68k_set_int_ack_callback(i32* null)
  %7 = call i32 @m68k_set_bkpt_ack_callback(i32* null)
  %8 = call i32 @m68k_set_reset_instr_callback(i32* null)
  %9 = call i32 @m68k_set_pc_changed_callback(i32* null)
  %10 = call i32 @m68k_set_fc_callback(i32* null)
  %11 = call i32 @m68k_set_instr_hook_callback(i32* null)
  ret void
}

declare dso_local i32 @m68ki_build_opcode_table(...) #1

declare dso_local i32 @m68k_set_int_ack_callback(i32*) #1

declare dso_local i32 @m68k_set_bkpt_ack_callback(i32*) #1

declare dso_local i32 @m68k_set_reset_instr_callback(i32*) #1

declare dso_local i32 @m68k_set_pc_changed_callback(i32*) #1

declare dso_local i32 @m68k_set_fc_callback(i32*) #1

declare dso_local i32 @m68k_set_instr_hook_callback(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
